fixed gif display problem and deleted overflow scroll css

--- a/fully-banner/src/App.css
+++ b/fully-banner/src/App.css
@@ -47,7 +47,7 @@ html, body {
 }
 @media(max-width:900px){
 	.main-content{
-		overflow: scroll; 
+		/* overflow: scroll;  */
 		-webkit-overflow-scrolling: touch;
 	}
 }
